Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,32 +39,7 @@
           <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>This is a client/server program, that allows you to create your own Dynamic DNS solution. The only thing required is bind installed on server side.</p>
-
-<h3>
-<a id="compilation" class="anchor" href="#compilation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Compilation</h3>
-
-<pre><code>$ make
-$ make client
-$ make server
-
-</code></pre>
-
-<p>To compile this software go to src directory and type: make. If you want to compile only client or server type "make client" or "make server.</p>
-
-<h3>
-<a id="configuration" class="anchor" href="#configuration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Configuration</h3>
-
-<p>Sample configuration files are in doc directory. You can adjust them to your environment. There are few rules regarding editing these files.</p>
-
-<p>option and value should be separated by space, '=' and space
-directory path for zonedir (server only) must end with trailing slash '/'
-lines with hash sign (#) are ommited</p>
-
-<h3>
-<a id="running" class="anchor" href="#running" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running</h3>
-
-<p>After compiling software you will have binary files: ddns-server and ddns-client. You can place them and configuration files wherever you want on your system. Both client and server have only one important commandline option: -c which points to location of configuration file.</p>
+<p>dDNS-ng is written etirelly in C.</p>
         </article>
       </div>
     </div>
