Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,65 +1,40 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-  <title>dDNS-ng</title>
-  <meta name="description" content="dynamic DNS client/server with MySQL support">
+    <title>dDNS-ng by kkrolikowski</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
     <header>
-      <h1 class="title">dDNS-ng</h1>
+      <div class="container">
+        <h1>dDNS-ng</h1>
+        <h2>dynamic DNS client/server with MySQL support</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/kkrolikowski/dyndns/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/kkrolikowski/dyndns/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/kkrolikowski/dyndns" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
     </header>
-    <div id="container">
-      <p class="tagline">dynamic DNS client/server with MySQL support</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/kkrolikowski/dyndns/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/kkrolikowski/dyndns/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/kkrolikowski/dyndns" class="code">View dDNS-ng on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>dDNS-ng is written etirelly in C.</p>
-        </article>
-      </div>
+<p>dDNS-ng is written etirelly in C. Supports user accounts, that are stored in MySQL database.</p>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/kkrolikowski" class="avatar"><img src="https://avatars1.githubusercontent.com/u/11251609?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/kkrolikowski">kkrolikowski</a> maintains <a href="https://github.com/kkrolikowski/dyndns">dDNS-ng</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/kkrolikowski/dyndns/tarball/master" class="tar">tar</a><a href="https://github.com/kkrolikowski/dyndns/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    
+  </body>
 </html>
