--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>dDNS-ng is written etirelly in C. Supports user accounts, that are stored in MySQL database. All accounts belongs to one of the two groups. They can be <strong>user</strong> or <strong>admin</strong>.</p>
+<p>If you are tired searching another free dynamic DNS Service or none of available subdomains doesn't fits you and you are desperate to run your own service, here it is! dDNS-ng solution.</p>
         </section>
 
         <footer>
