Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>If you are tired searching another free dynamic DNS Service or none of available subdomains doesn't fits you and you are desperate to run your own service, here it is! dDNS-ng solution.</p>
+<p><img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" alt="">If you are tired searching another free dynamic DNS Service or none of available subdomains doesn't fits you and you are desperate to run your own service, here it is! dDNS-ng solution.</p>
         </section>
 
         <footer>
