--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
 <p><img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" width="50%" height="50%" align="right"> If you are tired searching another free dynamic DNS Service or none of available subdomains doesn't fits you and you are desperate to run your own service, here it is! dDNS-ng solution.
 </p>
+<p>
+  Clients connects over the internet to dDNS-ng server which asks database to authenticate client and performing check if client
+  is authorized to update existing record or create a new one. If he will have positive results from database, then performs
+  necessary actions on DNS server.
+</p>
         </section>
 
         <footer>
