--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does it work?</h3>
 <p>
-  Clients connects over the internet to dDNS-ng server which asks database to authenticate client and performing check if client
-  is authorized to update existing record or create a new one. If he will have positive results from database, then performs
+  Client connects over the internet to dDNS-ng server which asks database to authenticate client and performs check if client
+  is authorized to update existing record or create a new one. If he will recive positive results from database, then performs
   necessary actions on DNS server.
 </p>
         </section>
