--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
         <section id="main_content">
           <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
-
-<p><img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" width="60%" height="60%" align="right">
-If you are tired searching for another free dynamic DNS Service or none of available subdomains doesn't fits you and 
+<div class="thumbnail">
+    <div class="image">
+        <img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" width="60%" height="60%" align="right">
+    </div>
+</div>
+<p>If you are tired searching for another free dynamic DNS Service or none of available subdomains doesn't fits you and 
 you are desperate to run your own service, here it is! dDNS-ng solution.
 </p>
 <h3>
