--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 <div class="thumbnail">
     <div class="image">
-        <img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" width="60%" height="60%" align="right">
+        <img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" align="right">
     </div>
 </div>
 <p>If you are tired searching for another free dynamic DNS Service or none of available subdomains doesn't fits you and 
