--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -34,12 +33,7 @@
         <section id="main_content">
           <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
-<div class="thumbnail">
-    <div class="image">
-        <img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" align="right">
-    </div>
-</div>
-<p>If you are tired searching for another free dynamic DNS Service or none of available subdomains doesn't fits you and 
+<p><img src="https://dl.dropboxusercontent.com/u/3996605/dDNS-ng.png" width="60%" height="60%" align="right">If you are tired searching for another free dynamic DNS Service or none of available subdomains doesn't fits you and 
 you are desperate to run your own service, here it is! dDNS-ng solution.
 </p>
 <h3>
