--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@ you are desperate to run your own service, here it is! dDNS-ng solution.
   is authorized to update existing record or create a new one. If he will recive positive results from database, then performs
   necessary actions on DNS server.
 </p>
+<h3>
+<a id="customdomains" class="anchor" href="#cd" aria-hidden="true"><span class="octicon octicon-link"></span></a>Custom Domains</h3>
+<p>
+  Every registered user can add his own domain to the system. In general. He can add as many domains as he want to.
+  This is a real milestone in development cycle of this software. This gives users real freedom of using dynamic IP services.
+</p>
         </section>
 
         <footer>
